# taiHEN

./: .gitmodules  .travis.yml  CMakeLists.txt  CNAME  Doxyfile  README.md  USAGE.md  error.h  exports.yml  hen.c  hen.h  index.html  module.c  module.h  params.json  patches.c  patches.h  patches_map.c  patches_map.h  plugin.c  plugin.h  posix-compat.c  proc_map.c  proc_map.h  slab.c  slab.h  taihen-user.c  taihen.c  taihen.h  taihen_internal.h
docs/: _r_e_a_d_m_e_8md_source.html  _u_s_a_g_e_8md_source.html  annotated.html  classes.html  error_8h_source.html  files.html  functions.html  functions_vars.html  globals_func.html  globals_vars.html  group__error.html  group__hen.html  group__hook.html  group__hooks.html  group__inject.html  group__module.html  group__patches.html  group__plugin.html  group__proc__map.html  group__taihen.html  hen_8c_source.html  hen_8h_source.html  index.html  md__u_s_a_g_e.html  menudata.js  module_8c_source.html  module_8h_source.html  modules.html  pages.html  patches_8c.html  patches_8c_source.html  patches_8h_source.html  posix-compat_8c_source.html  proc__map_8c.html  proc__map_8c_source.html  proc__map_8h_source.html  slab_8c_source.html  slab_8h_source.html  struct____attribute____.html  struct__tai__hook.html  (+22 more)
docs/html/: _r_e_a_d_m_e_8md_source.html  classes.html  error_8h_source.html  functions.html  functions_vars.html  globals.html  globals_defs.html  group__module.html  group__patches.html  group__skprx.html  hen_8h_source.html  index.html  module_8c_source.html  patches_8c_source.html  patches_8h_source.html  posix-compat_8c_source.html  slab_8h_source.html  struct__tai__inject.html  struct__tai__patch.html  struct__tai__proc.html  struct__tai__proc__map.html  struct__tai__start.html  struct__tai__substitute__args.html  structsce__module__exports.html  structsce__module__imports__2.html  structslab__header.html  taihen_8c_source.html  taihen__internal_8h_source.html  unionsce__module__imports.html
docs/html/search/: all_1.js  all_11.js  all_7.js  all_b.js  all_c.js  all_f.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  enums_0.js  functions_2.js  functions_3.js  groups_1.js  groups_2.js  searchdata.js  variables_3.js  variables_4.js  variables_8.js  variables_a.js
docs/search/: all_0.js  all_10.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_a.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_2.js  defines_3.js  files_0.js  functions_1.js  functions_4.js  groups_0.js  groups_3.js  groups_4.js  groups_5.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_5.js  variables_6.js  variables_7.js  variables_a.js  variables_b.js  variables_c.js  variables_d.js
kernel/: Makefile  kernel.json
tests/: Makefile  compat.c  test_api_kernel.c  test_patches.c  test_proc_map.c
tests/include/psp2kern/: types.h
tests/include/psp2kern/io/: fcntl.h
tests/include/psp2kern/kernel/: cpu.h  modulemgr.h  sysmem.h  threadmgr.h
